--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,11 @@ repos:
       - id: shellcheck
 
   - repo: https://github.com/DavidAnson/markdownlint-cli2
-    rev: v0.18.1
+    rev: v0.19.0
     hooks:
       - id: markdownlint-cli2
+
+  - repo: https://github.com/lorenzwalthert/gitignore-tidy
+    rev: 0.1.3
+    hooks:
+      - id: tidy-gitignore
